2014-09-03  Michael Wiegand <michael.wiegand@greenbone.net>

	Make license of CMakeLists.txt files consistent.

	* doc/CMakeLists.txt: Change license from LGPLv2+ to GPLv2+.

2014-08-29  Michael Wiegand <michael.wiegand@greenbone.net>

	* CMakeLists.txt, src/CMakeLists.txt, src/otp.c, src/otp.h,
	tools/greenbone-nvt-sync: Ensure the GPLv2+ license notice uses the
	paragraph suggested by the Free Software Foundation.

2014-08-28  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/pluginschedule.c (plugins_scheduler_init): Check for null function
	argument earlier, otherwise we may crash due to null pointer dereference.

	* src/ntp.c (ntp_timestamp_host_scan_interrupted): Remove unused
	function.

	* src/ntp.h: Remove function prototype.

2014-08-27  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/attack.c (attack_start): Removed setting of non_simult_ports
	in case the preferences is missing. It is not a good idea to set
	some arbitrary default right here instead of keeping this in a
	single place, the preferences defaults.

2014-08-27  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/pluginscheduler.c: Removed TODO about cache as this
	is not relevant anymore.
	(struct plist): Changed fixed size of name into a pointer.
	(scheduler_mark_running_ports): Use g_strdup instead of
	strncpy for the name.
	(scheduler_rm_running_ports): Free the name now that
	it is a pointer.

2014-08-27  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/pluginscheduler.c (plugins_scheduler_init): Do NULL
	check before calling g_strsplit to silence assertion messages.

2014-08-27  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Get rid of last occurances of str2arglist.

	* src/pluginscheduler.c (struct hash): Change type of ports
	and dependencies from char to gchar.
	(hash_link_destroy): Simplify the removal of the strings arrays
	by using gstrfreev.
	(hash_add): Get the dependencies and required ports as string arrays